--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/mocha": "^10.0.1",
+    "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   }
 }
