--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.22"
   }
