--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Sprint 1",
   "main": "index.js",
   "scripts": {
-    "test": "test",
+    "test": "mocha tests/*.spec.js --color",
     "lint": "eslint src/* --color"
   },
   "repository": {
