eslint fix, adjust rules (Zoom meeting3)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,9 @@
         "react"
     ],
     "rules": {
+        "indent": ["error", 4],
+        "linebreak-style": ["error", "windows"],
+        "no-console": ["off"],
+        "prefer-template": ["off"]
     }
 }
