--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Sprint 1",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "mocha tests/*.spec.js --color",
     "lint": "eslint src/* --color"
   },
