project name update (zoom meeting)

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projectmanagement2023",
+  "name": "projectmanagement2023_be",
   "version": "1.0.0",
   "description": "Sprint 1",
   "main": "index.js",
