--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,6 +38,11 @@
          * string operators restrictions - disabled. 
          * allows to use operator '+' with strings.
          */
-        "prefer-template": ["off"]
+        "prefer-template": ["off"],
+
+        "import/newline-after-import": ["off"],
+        "no-multiple-empty-lines": ["off"],
+        "import/first": ["off"]
+        
     }
 }
