--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@types/chai": "^4.3.4",
     "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
-    "eslint": "^8.36.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint": "^8.41.0",
+    "eslint-config-standard": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "standardx": "^7.0.0"
   }
 }
