--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,6 +23,12 @@
         "no-multiple-empty-lines": 0,
 
         /* No multi spaces in one row before comments - Ignore comments. Wanr about code. */
-        "no-multi-spaces": ["warn", { "ignoreEOLComments": true }]
+        "no-multi-spaces": ["warn", { "ignoreEOLComments": true }],
+
+        /* Ingore 'Require the use of === and !==' */
+        "eqeqeq": 0,
+        
+        /** force CamelCase in names - disabled. (wont work properly) */
+        "camelcase": ["off"]
     }
 }
