--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "eslint-config-standard-jsx": "^11.0.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.1.0"
@@ -35,8 +36,10 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-n": "^15.7.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.5.0",
     "mocha": "^10.2.0",
     "nodemon": "^2.0.22",
-    "standardx": "^7.0.0"
+    "standardx": "^7.0.0",
+    "supertest": "^6.3.3"
   }
 }
