--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "mocha tests/*.js --color",
+    "test": "jest --detectOpenHandles --forceExit src/tests",
+    "testmocha": "mocha src/testsmocha/*spec.js --color",
     "lint": "eslint src/* --color"
   },
   "repository": {
