tests bug fixed & made tests results more readable

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "jest --detectOpenHandles --forceExit --runInBand src/test",
+    "test": "jest --detectOpenHandles --forceExit --runInBand --silent src/test",
     "testauth": "jest --detectOpenHandles --forceExit src/tests/auth.test.js",
     "testpost": "jest --detectOpenHandles --forceExit src/tests/post.test.js",
     "testmocha": "mocha src/testsmocha/*.spec.js --color",
