--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node src/index.js",
     "test": "jest --detectOpenHandles --forceExit --runInBand --silent src/test",
+    "testinfo": "jest --detectOpenHandles --forceExit --runInBand src/test",
     "testauth": "jest --detectOpenHandles --forceExit src/tests/auth.test.js",
     "testpost": "jest --detectOpenHandles --forceExit src/tests/post.test.js",
     "testmocha": "mocha src/testsmocha/*.spec.js --color",
