--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "description": "Sprint 1",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "NODE_ENV=production node src/index.js",
+    "startdev": "SET NODE_ENV=development & node src/index.js",
+    "startproduction": "NODE_ENV=production node src/index.js",
     "test": "jest --detectOpenHandles --forceExit --runInBand --silent src/test",
     "testinfo": "jest --detectOpenHandles --forceExit --runInBand src/test",
     "testauth": "jest --detectOpenHandles --forceExit src/tests/auth.test.js",
     "testpost": "jest --detectOpenHandles --forceExit src/tests/post.test.js",
+    "testuser": "jest --detectOpenHandles --forceExit src/tests/user.test.js",
     "testmocha": "mocha src/testsmocha/*.spec.js --color",
     "lint": "eslint src/* --color"
   },
