--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "NODE_ENV=production node src/index.js",
-    "startdev": "SET NODE_ENV=development & node src/index.js",
+    "startdev": "set NODE_ENV=development&& node src/index.js",
     "startproduction": "NODE_ENV=production node src/index.js",
     "test": "jest --detectOpenHandles --forceExit --runInBand --silent src/test",
     "testinfo": "jest --detectOpenHandles --forceExit --runInBand src/test",
