--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ jobs:
       # - run:
       #     name: Run tests
       #     command: npm run testinfo
-      - run:
-          name: Run Linter
-          command: npm run lint
+      # - run:
+      #     name: Run Linter
+      #     command: npm run lint
       - run:
           name: CD - Deploy web server
           command: curl "https://api.render.com/deploy/srv-cgil267dvk4vd547lm70?key=zXtl5KeQBKE"
